Fixed footer spacing issue
I made the footer outside of the bottom container and removed the margin on the text to fix the spacing issue in my previous commit. The landing page is now complete!

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body
     display: flex;
     justify-content: center; 
     align-items: center;
-    margin-top: 16px;
+    margin-top: 32px;
     width: 950px;
 }
 
@@ -59,6 +59,7 @@ ul
     margin: 0;
     padding: 0;
     margin-left: auto;
+    margin-right: 100px;
 }
 
 li
@@ -119,7 +120,7 @@ button
 
 .main_image
 {
-    height: 270px;
+    height: 295px;
     width: auto;
     margin-left: 50px;
 }
@@ -156,15 +157,15 @@ h2
     display: flex;
     flex-direction: column;
     width: 20%;
-    height: 100%;
+
 }
 
 .info-image
-{
-    height: 150px;
+{ 
+    min-height: 150px; /*Ensures all images are at least 150px high*/
     border-radius: 24px;
     border: 2px solid brown;
-    /*Resizes all images so they can be the same size*/
+    
 }
 
 .info-desc
@@ -206,7 +207,7 @@ h2
     padding-bottom: 0;
     align-items: center;
     background: white;
-    height: 20%;
+    height: 16%;
     justify-content: center;
 }
 
@@ -215,8 +216,10 @@ h2
     display: flex;
     background: #3882F6;
     width: 950px;
+    height: 130px;
     align-items: center;
     justify-content: center;
+    gap: 400px;
 }
 
 .action-text
@@ -243,13 +246,18 @@ h2
 .action-container>button
 {
     border: 2px solid white;
-    margin-left: auto;
+  
 }
 
 .footer
 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #1F2937;
     width: 100%;
+    height: 4%;
+    margin-top: 0;
 }
 
 .footer-text
